# libdvbsubdec

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/templates/: PULL_REQUEST_TEMPLATE.md
.github/templates/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
demo_app/demo_app_qt/: CMakeLists.txt  README.md  cli_test.cpp
demo_app/demo_app_qt/src/: MainWindow.cpp  MainWindow.h  SubtitleWidget.cpp  SubtitleWidget.h  main.cpp
demo_app/demo_app_sdl/: CMakeLists.txt
demo_app/demo_app_sdl/src/: main.c  pes_queue.c  pes_queue.h  sdl_player.c  sdl_player.h  subtitle_renderer.c  subtitle_renderer.h
demo_app/samples/: 490000000_subtitle_pid_205.pes  506000000_subtitle_pid_6870.pes  514000000_subtitle_pid_1631.pes  514000000_subtitle_pid_1931.pes  tnt-paris-uhf-24_subtitle_pid_3035.pes  tnt-uhf33-570MHz-2019-01-22_subtitle_pid_140.pes  tnt-uhf33-570MHz-2019-01-22_subtitle_pid_142.pes
libdvbsubdec/: CMakeLists.txt  dvbsubdecConfig.cmake.in
libdvbsubdec/src/: lslist.c  lslist.h  lsmemory.c  lsmemory.h  lspqueue.c  lspqueue.h  lsptsmgr.c  lsptsmgr.h  lssubconverter.c  lssubconverter.h  lssubdec.c  lssubdec.h  lssubdecoder.c  lssubdecoder.h  lssubdisplay.c  lssubdisplay.h  lssuben300743.c  lssuben300743.h  lssubgfx.c  lssubgfx.h  lssubmacros.h  lssubpes.c  lssubpes.h  lssubpixmap.c  lssubpixmap.h  lssubport.c  lssubport.h  lssubsegdec.c  lssubsegdec.h  lssubsegparser.c  lssubsegparser.h  lssubutils.c  lssubutils.h  lssubver.h  lssystem.c  lssystem.h
